# auto-ai-video

./: .gitignore  README.md  argument.py  batch_main.py  config.yaml  main.py  package-lock.json  pyproject.toml
batch_output/: batch_report_1767846234.md
config/: __init__.py  config.py
docs/: README.md  api_reference.md  architecture.md  camera-action-enhanced.md  configuration.md  content_strategy.md  idiom_story_feature.md  layer-separation-tech.md  parallax-2.5d-plan.md  parallax-style-guide.md  static_video_scenarios.md  testing_guide.md
llm/: base.py  google_provider.py  llm_client.py  openai_provider.py  volcengine_provider.py
model/: models.py
models/: README.md
prompt/: factory.py  prompt_strategy.py
scripts/: gen_brand_intro_image.py  gen_huibao_intro_keyframes.py  gen_mascot_huibao.py
steps/: step.py
steps/animator/: base_animator.py  jimeng.py  luma_ai.py  mock.py  stability.py
steps/audio/: azure.py  base.py  factory.py  gen_audio_placeholders.py  generic.py  sfx_manager.py  volc.py
steps/batch/: reader.py  runner.py
steps/effects/: __init__.py  depth_estimator.py  layer_separator.py  parallax_animator.py
steps/image/: factory.py  font.py
steps/script/: base.py  book.py  (+2 more)
tests/: README.md  batch_input.csv  compare_easing_effect.py  dbg_full_pipline.py  dbg_image_size.py  dbg_intro.py  dbg_intro_dub.py  dbg_ssml.py  dbg_tts.py  debug_volc.py  t.xml  test_bilingual.py  test_bilingual_cover.py  test_depth_estimation.py  test_gen.py  test_layer_separation.py  test_parallax_animation.py  test_tts_voices.py
util/: logger.py  utils.py
(+6 files in other folders)
